Ouverture des pdf pour téléchargement

--- a/activites.html
+++ b/activites.html
@@ -42,7 +42,7 @@
         <ul>
           <li><a href="index.html">Accueil</a></li>
           <li><a href="about.html">À propos</a></li>
-          <li><a href="services.html">Services</a></li>
+          <li><a href="services.html">Formations</a></li>
           <li><a href="activités.html" class="active" >Nos activités</a></li>
           <li><a href="team.html">Equipe administrative</a></li>
           <li><a href="contact.html">Contact</a></li>
