--- a/contact.html
+++ b/contact.html
@@ -42,8 +42,7 @@
         <ul>
           <li><a href="index.html">Accueil</a></li>
           <li><a href="about.html">À propos</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="activites.html">Nos activités</a></li>
+          <li><a href="formations.html">Formations</a></li>
           <li><a href="team.html">Equipe administrative</a></li>
           <li><a href="contact.html" class="active">Contact</a></li>
         </ul>
