--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
         <ul>
           <li><a href="index.html" class="active">Accueil</a></li>
           <li><a href="about.html">À propos</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="activites.html">Nos activités</a></li>
+          <li><a href="formations.html">Formations</a></li>
           <li><a href="team.html">Equipe administrative</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
