Ajout du surveillant général

--- a/team.html
+++ b/team.html
@@ -141,6 +141,19 @@
                       </div>
                   </div>
               </div>
+
+              <!-- Surveillant général -->
+              <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="400">
+                  <div class="member open-popup" data-member="surveillant">
+                      <img src="assets/img/team/surveillant.jpeg" class="img-fluid" alt="">
+                      <div class="member-info">
+                          <div class="member-info-content">
+                              <h4>Mr NDAM MOUCHILI CHERIF</h4>
+                              <span>Responsable de la discipline et de l’encadrement des élèves maîtres</span>
+                          </div>
+                      </div>
+                  </div>
+              </div>
           </div>
       </div>
   
@@ -217,7 +230,7 @@
         // Dictionnaire des descriptions des membres
         const memberDetails = {
             "directeur": {
-                title: "Mr KOUSSIAKBE JEAN",
+                title: "Mr NENBA CHRISTIAN",
                 text: " Directeur de l'ENIET de Ngaoundére, il assure la direction technique, administrative, financiere et pedagogique de l’ecole. A ce titre il: • Veille au bon deroulement de l’année scolaire ; • Elabore et met en œuvre les programmes de recherches sous le contrôle de l’inspection de pédagogie competente ; • Developpe des partenariats avec les milieux socioprofessionnels ; • Veille au respect du reglement interieur de l’ecole; • Execute les instructions du ministre chargé de l’enseignement normal et les decisions du conseil d’etablissement ; • Preside tous les conseils à l’exception du conseil d’etalissement ; • Presente au conseil d’etablissement le compte administratif ; • Gere le personnel de l’etablissement ; • Veille au respect des horaires et programmes ; • Organise les vacations decidées par le conseil d’etablissement ;"
             },
             "directeur_adjoint": {
@@ -235,6 +248,10 @@
             "materiel": {
                 title: "Mme MPAMI YOMI FLORENCE",
                 text: "Chef du service du matériel, de la maintenance et des infrastructures, elle gère les ateliers, les salles specialisées et de la matière d’œuvre. L'organisation et du suivi des travaux pratiques  et la maintenance des équipements et des infrastructures"
+            },
+            "surveillant": {
+                title: "Mr NDAM MOUCHILI CHERIF",
+                text: "Responsable de la discipline et de l’encadrement des élèves maîtres, il veille à la bonne tenue de l’école et à la sécurité des élèves. Il est chargé de l’organisation et du suivi de la discipline, de l’encadrement des élèves maîtres, de la gestion des conflits et de la communication avec les familles en cas de besoin."
             }
         };
 
