Ajout SAF dans la team

--- a/team.html
+++ b/team.html
@@ -75,7 +75,7 @@
 
   <div class="container">
     <!-- Directeur - Seul sur sa ligne -->
-    <div class="directeur-section">
+    <div class="directeur-section mt-4">
       <div class="row justify-content-center">
         <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
           <div class="member-card open-popup" data-member="directeur">
@@ -93,7 +93,7 @@
     </div>
 
     <!-- Autres membres de l'équipe -->
-    <div class="autres-equipe">
+    <div class="autres-equipe mt-5">
       <h3 class="section-subtitle" data-aos="fade-up">Notre équipe</h3>
       
       <div class="row gy-5 justify-content-center">
@@ -121,6 +121,20 @@
               <h4>Mr LOUBA FRANCK</h4>
               <span class="member-title">Chef service scolarité</span>
               <p class="member-desc">Service de la scolarité et de la documentation</p>
+            </div>
+          </div>
+        </div>
+        
+        <!-- SAF -->
+        <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
+          <div class="member-card open-popup" data-member="saf">
+            <div class="member-img">
+              <img src="assets/img/team/SAF.jpeg" class="img-fluid" alt="saf">
+            </div>
+            <div class="member-info">
+              <h4>Mr SOUARE BAYANG</h4>
+              <span class="member-title">Chef Service Administratif et Financier</span>
+              <p class="member-desc">Service Administratif et Financier</p>
             </div>
           </div>
         </div>
@@ -256,6 +270,10 @@
             "etudes": {
                 title: "Mr GARGA ALAIN RICHARD",
                 text: "Chef du service des études et des stages, Il s'occupe des enseignements, formations en alternance, formations continues, recherches dans le domaine pedagogique et de la discipline"
+            },
+            "saf": {
+                title: "Mr SOUARE BAYANG",
+                text: "Chef du service administratif et financier, Il s'occupe de la gestion administrative et financière de l'établissement."
             },
             "materiel": {
                 title: "Mme MPAMI YOMI FLORENCE",
